Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.5(EOL), 10.6(EOL), 10.11
Description
mysqld options required for replay: --innodb-page-size=4k
--source include/have_innodb.inc
|
|
|
SET GLOBAL innodb_autoextend_increment=0; |
CREATE TEMPORARY TABLE t (c LONGTEXT) ENGINE=INNODB; |
INSERT INTO t VALUES (REPEAT (1,167776)); |
Leads to:
|
10.11.8 64314d3094ef5eb52223c613632292be96bd7732 (Debug) |
mariadbd: /test/10.11_dbg/storage/innobase/fsp/fsp0fsp.cc:2186: buf_block_t* fseg_alloc_free_page_low(fil_space_t*, fseg_inode_t*, buf_block_t*, uint32_t, byte, bool, mtr_t*, mtr_t*, dberr_t*): Assertion `!has_done_reservation || *err' failed.
|
|
10.11.8 64314d3094ef5eb52223c613632292be96bd7732 (Debug) |
Core was generated by `/test/MD070524-mariadb-10.11.8-linux-x86_64-dbg/bin/mariadbd --no-defaults --ma'.
|
Program terminated with signal SIGABRT, Aborted.
|
#0 __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
|
[Current thread is 1 (Thread 0x148784164700 (LWP 1960780))]
|
(gdb) bt
|
#0 __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
|
#1 0x00001487996b2859 in __GI_abort () at abort.c:79
|
#2 0x00001487996b2729 in __assert_fail_base (fmt=0x148799848588 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=0x5567fd757ddf "!has_done_reservation || *err", file=0x5567fd757e90 "/test/10.11_dbg/storage/innobase/fsp/fsp0fsp.cc", line=2186, function=<optimized out>) at assert.c:92
|
#3 0x00001487996c3fd6 in __GI___assert_fail (assertion=assertion@entry=0x5567fd757ddf "!has_done_reservation || *err", file=file@entry=0x5567fd757e90 "/test/10.11_dbg/storage/innobase/fsp/fsp0fsp.cc", line=line@entry=2186, function=function@entry=0x5567fd758e00 "buf_block_t* fseg_alloc_free_page_low(fil_space_t*, fseg_inode_t*, buf_block_t*, uint32_t, byte, bool, mtr_t*, mtr_t*, dberr_t*)") at assert.c:101
|
#4 0x00005567fd18c68b in fseg_alloc_free_page_low (space=space@entry=0x5568009b61a8, seg_inode=seg_inode@entry=0x14879817c6f2 "", iblock=0x148798051a00, hint=0, hint@entry=4096, direction=direction@entry=113 'q', has_done_reservation=has_done_reservation@entry=true, mtr=0x1487841612d0, init_mtr=0x1487841612d0, err=0x14878416121c) at /test/10.11_dbg/storage/innobase/fsp/fsp0fsp.cc:2186
|
#5 0x00005567fd18d4b7 in fseg_alloc_free_page_general (seg_header=0x1487981aa04a "\377\377\377\376", hint=hint@entry=4096, direction=direction@entry=113 'q', has_done_reservation=has_done_reservation@entry=true, mtr=mtr@entry=0x1487841612d0, init_mtr=init_mtr@entry=0x1487841612d0, err=0x14878416121c) at /test/10.11_dbg/storage/innobase/fsp/fsp0fsp.cc:2298
|
#6 0x00005567fd070040 in btr_page_alloc_low (err=0x14878416121c, init_mtr=0x1487841612d0, mtr=0x1487841612d0, level=0, file_direction=113 'q', hint_page_no=4096, index=0x148784160f50) at /test/10.11_dbg/storage/innobase/btr/btr0btr.cc:624
|
#7 btr_page_alloc (index=index@entry=0x14875001d588, hint_page_no=4096, file_direction=file_direction@entry=113 'q', level=level@entry=0, mtr=mtr@entry=0x1487841612d0, init_mtr=init_mtr@entry=0x1487841612d0, err=0x14878416121c) at /test/10.11_dbg/storage/innobase/btr/btr0btr.cc:651
|
#8 0x00005567fd0a56ec in btr_store_big_rec_extern_fields (pcur=pcur@entry=0x148784161a60, offsets=offsets@entry=0x148784161800, big_rec_vec=big_rec_vec@entry=0x148752020f28, btr_mtr=btr_mtr@entry=0x148784162050, op=op@entry=BTR_STORE_INSERT) at /test/10.11_dbg/storage/innobase/btr/btr0cur.cc:6163
|
#9 0x00005567fcf7ea3b in row_ins_index_entry_big_rec (thd=0x148750000d48, index=0x14875001d588, heap=0x148784161710, offsets=0x148784161800, big_rec=0x148752020f28, entry=0x148752020c18) at /test/10.11_dbg/storage/innobase/row/row0ins.cc:2554
|
#10 row_ins_clust_index_entry_low (flags=flags@entry=2, mode=<optimized out>, mode@entry=BTR_MODIFY_LEAF, index=index@entry=0x14875001d588, n_uniq=n_uniq@entry=0, entry=entry@entry=0x148752020c18, n_ext=n_ext@entry=0, thr=<optimized out>) at /test/10.11_dbg/storage/innobase/row/row0ins.cc:2905
|
#11 0x00005567fcf7f07e in row_ins_clust_index_entry (index=index@entry=0x14875001d588, entry=entry@entry=0x148752020c18, thr=thr@entry=0x1487500204c8, n_ext=n_ext@entry=0) at /test/10.11_dbg/storage/innobase/row/row0ins.cc:3259
|
#12 0x00005567fcf80c7e in row_ins_index_entry (thr=0x1487500204c8, entry=0x148752020c18, index=0x14875001d588) at /test/10.11_dbg/storage/innobase/row/row0ins.cc:3396
|
#13 row_ins_index_entry_step (thr=0x1487500204c8, node=<optimized out>) at /test/10.11_dbg/storage/innobase/row/row0ins.cc:3564
|
#14 row_ins (thr=0x1487500204c8, node=<optimized out>) at /test/10.11_dbg/storage/innobase/row/row0ins.cc:3689
|
#15 row_ins_step (thr=thr@entry=0x1487500204c8) at /test/10.11_dbg/storage/innobase/row/row0ins.cc:3818
|
#16 0x00005567fcfa4850 in row_insert_for_mysql (mysql_rec=mysql_rec@entry=0x14875001f148 "\376", prebuilt=0x14875001fdf8, ins_mode=ROW_INS_NORMAL) at /test/10.11_dbg/storage/innobase/row/row0mysql.cc:1316
|
#17 0x00005567fce1c5be in ha_innobase::write_row (this=0x14875001f560, record=0x14875001f148 "\376") at /test/10.11_dbg/storage/innobase/handler/ha_innodb.cc:7815
|
#18 0x00005567fca92e8d in handler::ha_write_row (this=0x14875001f560, buf=0x14875001f148 "\376") at /test/10.11_dbg/sql/handler.cc:7716
|
#19 0x00005567fc73c89c in write_record (thd=thd@entry=0x148750000d48, table=table@entry=0x14875001c208, info=info@entry=0x148784162b20, sink=sink@entry=0x0) at /test/10.11_dbg/sql/sql_insert.cc:2251
|
#20 0x00005567fc747825 in mysql_insert (thd=thd@entry=0x148750000d48, table_list=<optimized out>, fields=@0x148750006120: {<base_list> = {<Sql_alloc> = {<No data fields>}, first = 0x5567fdefffa0 <end_of_list>, last = 0x148750006120, elements = 0}, <No data fields>}, values_list=@0x148750006168: {<base_list> = {<Sql_alloc> = {<No data fields>}, first = 0x148750014390, last = 0x148750014390, elements = 1}, <No data fields>}, update_fields=@0x148750006150: {<base_list> = {<Sql_alloc> = {<No data fields>}, first = 0x5567fdefffa0 <end_of_list>, last = 0x148750006150, elements = 0}, <No data fields>}, update_values=@0x148750006138: {<base_list> = {<Sql_alloc> = {<No data fields>}, first = 0x5567fdefffa0 <end_of_list>, last = 0x148750006138, elements = 0}, <No data fields>}, duplic=DUP_ERROR, ignore=false, result=0x0) at /test/10.11_dbg/sql/sql_insert.cc:1159
|
#21 0x00005567fc789ffa in mysql_execute_command (thd=thd@entry=0x148750000d48, is_called_from_prepared_stmt=is_called_from_prepared_stmt@entry=false) at /test/10.11_dbg/sql/sql_parse.cc:4607
|
#22 0x00005567fc775bd4 in mysql_parse (thd=thd@entry=0x148750000d48, rawbuf=<optimized out>, length=<optimized out>, parser_state=parser_state@entry=0x1487841632b0) at /test/10.11_dbg/sql/sql_parse.cc:8126
|
#23 0x00005567fc7837bc in dispatch_command (command=command@entry=COM_QUERY, thd=thd@entry=0x148750000d48, packet=packet@entry=0x14875000b139 "INSERT INTO t VALUES (REPEAT (1,16777216))", packet_length=packet_length@entry=42, blocking=blocking@entry=true) at /test/10.11_dbg/sql/sql_class.h:1397
|
#24 0x00005567fc786123 in do_command (thd=0x148750000d48, blocking=blocking@entry=true) at /test/10.11_dbg/sql/sql_parse.cc:1407
|
#25 0x00005567fc8f765b in do_handle_one_connection (connect=<optimized out>, connect@entry=0x556800c987b8, put_in_cache=put_in_cache@entry=true) at /test/10.11_dbg/sql/sql_connect.cc:1415
|
#26 0x00005567fc8f7c10 in handle_one_connection (arg=arg@entry=0x556800c987b8) at /test/10.11_dbg/sql/sql_connect.cc:1317
|
#27 0x00005567fcd4e136 in pfs_spawn_thread (arg=0x556800bf2d38) at /test/10.11_dbg/storage/perfschema/pfs.cc:2201
|
#28 0x0000148799bc3609 in start_thread (arg=<optimized out>) at pthread_create.c:477
|
#29 0x00001487997af133 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
|
Bug confirmed present in:
MariaDB: 10.5.25 (dbg), 10.6.18 (dbg), 10.11.8 (dbg)
Bug (or feature/syntax) confirmed not present in:
MariaDB: 10.5.25 (opt), 10.6.18 (opt), 10.11.8 (opt), 11.0.6 (opt), 11.0.6 (dbg), 11.1.5 (opt), 11.1.5 (dbg), 11.2.4 (opt), 11.2.4 (dbg), 11.4.2 (opt), 11.4.2 (dbg), 11.5.0 (opt) , 11.5.0 (dbg)
Attachments
Issue Links
- relates to
-
MDEV-18455 Crash On Table structure Change on very large table - With filesystem not having enough space, rendering the table (and server) unusable
-
- Closed
-