MDEV-34118 fsp_alloc_free_extent() fails to flag DB_OUT_OF_FILE_SPACE

fsp_alloc_free_extent(): When applicable, set *err = DB_OUT_OF_FILE_SPACE.